--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "2.0.0",
   "description": "Single Page Apps for GitHub Pages",
   "scripts": {
-    "start": "webpack -d --watch & live-server --entry-file=404.html"
+    "start": "webpack -d --watch & live-server --entry-file=404.html",
+    "build": "webpack -p",
+    "eslint": "eslint **/*.jsx"
   },
   "repository": {
     "type": "git",
@@ -13,8 +15,11 @@
   "license": "MIT",
   "dependencies": {
     "current-input": "^1.1.0",
+    "json-loader": "^0.5.4",
+    "raw-loader": "^0.5.1",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
+    "react-markdown": "^2.4.2",
     "react-router": "^2.4.1"
   },
   "devDependencies": {
