--- a/package.json
+++ b/package.json
@@ -20,19 +20,20 @@
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-markdown": "^2.4.2",
-    "react-router": "^2.4.1"
+    "react-router": "^2.4.1",
+    "whatwg-fetch": "^2.0.1"
   },
   "devDependencies": {
-    "babel-core": "^6.9.1",
-    "babel-eslint": "^6.1.2",
+    "babel-core": "^6.20.0",
+    "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-1": "^6.5.0",
     "eslint": "^3.2.2",
-    "eslint-config-airbnb": "^10.0.0",
-    "eslint-plugin-import": "^1.12.0",
-    "eslint-plugin-jsx-a11y": "^2.0.1",
+    "eslint-config-airbnb": "^13.0.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^3.0.2",
     "eslint-plugin-react": "^6.0.0",
     "live-server": "^1.0.0",
     "webpack": "^1.13.1"
