--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0",
   "description": "Single Page Apps for GitHub Pages",
   "scripts": {
-    "start": "webpack -d --watch & live-server --entry-file=404.html",
+    "start": "webpack-dev-server --watch --progress --inline --entry-file=404.html",
     "build": "webpack -p",
     "eslint": "eslint **/*.jsx"
   },
@@ -16,11 +16,14 @@
   "dependencies": {
     "current-input": "^1.1.0",
     "json-loader": "^0.5.4",
+    "radium": "^0.18.1",
     "raw-loader": "^0.5.1",
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0",
+    "react": "^15.4.1",
+    "react-burger-menu": "^1.10.10",
+    "react-dom": "^15.4.1",
     "react-markdown": "^2.4.2",
     "react-router": "^3.0.0",
+    "webpack-dev-server": "^1.16.2",
     "whatwg-fetch": "^2.0.1"
   },
   "devDependencies": {
@@ -36,6 +39,7 @@
     "eslint-plugin-jsx-a11y": "^3.0.2",
     "eslint-plugin-react": "^6.0.0",
     "live-server": "^1.0.0",
+    "redbox-react": "^1.3.3",
     "webpack": "^1.13.1"
   }
 }
