--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "radium": "^0.18.1",
     "raw-loader": "^0.5.1",
     "react": "^15.4.1",
-    "react-burger-menu": "^1.10.10",
     "react-dom": "^15.4.1",
     "react-markdown": "^2.4.2",
     "react-router": "^3.0.0",
+    "react-sidebar": "^2.2.1",
     "webpack-dev-server": "^1.16.2",
     "whatwg-fetch": "^2.0.1"
   },
