--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
   "dependencies": {
     "current-input": "^1.1.0",
     "json-loader": "^0.5.4",
+    "preact": "^7.1.0",
+    "preact-compat": "^3.9.4",
     "radium": "^0.18.1",
     "raw-loader": "^0.5.1",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
     "react-markdown": "^2.4.2",
     "react-router": "^3.0.0",
     "react-sidebar": "^2.2.1",
