--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "webpack-dev-server --watch --progress --inline --entry-file=404.html",
     "build": "webpack -p",
-    "eslint": "eslint **/*.jsx"
+    "eslint": "eslint **/*.jsx",
+    "prettier": "prettier --single-quote --trailing-comma es5 --semi --write \"components/**/*.{js,jsx}\""
   },
   "repository": {
     "type": "git",
@@ -16,29 +17,30 @@
   "dependencies": {
     "current-input": "^1.1.0",
     "json-loader": "^0.5.4",
-    "preact": "^7.2.0",
-    "preact-compat": "^3.14.3",
+    "preact": "^8.1.0",
+    "preact-compat": "^3.16.0",
+    "prettier": "^1.3.1",
     "radium": "^0.18.2",
     "raw-loader": "^0.5.1",
-    "react-markdown": "^2.4.6",
-    "react-router": "^3.0.2",
-    "react-sidebar": "^2.3.0",
-    "webpack-dev-server": "^2.4.2",
+    "react-markdown": "^2.5.0",
+    "react-router": "^4.1.1",
+    "react-sidebar": "^2.3.2",
+    "webpack-dev-server": "^2.4.5",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
-    "babel-core": "^6.24.0",
-    "babel-eslint": "^7.2.0",
-    "babel-loader": "^6.4.1",
-    "babel-preset-es2015": "^6.24.0",
-    "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-1": "^6.22.0",
-    "eslint": "^3.18.0",
+    "babel-core": "^6.24.1",
+    "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
+    "eslint": "^3.19.0",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.3",
+    "eslint-plugin-jsx-a11y": "^5.0.1",
+    "eslint-plugin-react": "^7.0.0",
     "live-server": "^1.2.0",
-    "redbox-react": "^1.3.4",
-    "webpack": "^2.2.1"
+    "redbox-react": "^1.3.6",
+    "webpack": "^2.5.1"
   }
 }
