--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0",
   "description": "Single Page Apps for GitHub Pages",
   "scripts": {
-    "start": "webpack-dev-server --watch --progress --inline --entry-file=404.html",
+    "start": "webpack-dev-server --watch --progress --inline",
     "build": "webpack -p",
     "eslint": "eslint **/*.jsx",
     "prettier": "prettier --single-quote --trailing-comma es5 --semi --write \"components/**/*.{js,jsx}\""
@@ -17,13 +17,13 @@
   "dependencies": {
     "current-input": "^1.1.0",
     "json-loader": "^0.5.4",
-    "preact": "^8.1.0",
-    "preact-compat": "^3.16.0",
     "prettier": "^1.3.1",
     "radium": "^0.18.2",
     "raw-loader": "^0.5.1",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
     "react-markdown": "^2.5.0",
-    "react-router": "^4.1.1",
+    "react-router": "^3.0.2",
     "react-sidebar": "^2.3.2",
     "webpack-dev-server": "^2.4.5",
     "whatwg-fetch": "^2.0.3"
