--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0",
   "description": "Single Page Apps for GitHub Pages",
   "scripts": {
-    "start": "webpack-dev-server --watch --progress --inline",
+    "start": "webpack-dev-server --watch --hot --progress --inline",
     "build": "webpack -p",
     "eslint": "eslint **/*.jsx",
     "prettier": "prettier --single-quote --trailing-comma es5 --semi --write \"components/**/*.{js,jsx}\""
@@ -18,6 +18,7 @@
     "current-input": "^1.1.0",
     "json-loader": "^0.5.4",
     "prettier": "^1.5.2",
+    "prismjs": "^1.6.0",
     "radium": "^0.18.2",
     "raw-loader": "^0.5.1",
     "react": "^15.5.4",
