--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,10 @@
 {
-  "presets": ["es2015", "react", "stage-1"],
+  "plugins":["transform-class-properties"],
+  "presets": ["react", 
+    ["env", {
+      "targets": {
+        "browsers": ["last 2 Chrome versions", "safari >= 10"]
+      }
+    }]
+  ]
 }
