--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Rafael Pedicini <code@rafrex.com>",
   "license": "MIT",
   "dependencies": {
+    "babel-preset-env": "^1.5.2",
     "current-input": "^1.1.0",
     "json-loader": "^0.5.4",
     "prettier": "^1.5.2",
