--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-markdown": "^2.5.0",
     "react-router": "^3.0.2",
     "react-sidebar": "^2.3.2",
+    "uglify-es-webpack-plugin": "^0.0.2",
     "webpack-dev-server": "^2.5.0",
     "whatwg-fetch": "^2.0.3"
   },
