--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "webpack-dev-server --watch --hot --progress --inline",
     "build": "NODE_ENV='production' ./node_modules/.bin/webpack --progress",
     "eslint": "eslint **/*.jsx",
-    "prettier": "prettier --write \"components/**/*.{js,jsx}\""
+    "prettier": "prettier --write \"components/**/*.{js,jsx}\"",
+    "precommit": "yarn prettier && yarn eslint && yarn build && git add bundle.js bundle.js.map"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,7 @@
   "dependencies": {
     "babel-preset-env": "^1.6.0",
     "current-input": "^1.1.0",
+    "git-pre-commit": "^2.1.3",
     "json-loader": "^0.5.7",
     "prettier": "^1.6.1",
     "prismjs": "^1.6.0",
