--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "2.0.0",
   "description": "Single Page Apps for GitHub Pages",
   "scripts": {
-    "start": "webpack-dev-server --watch --hot --progress --inline",
-    "build": "NODE_ENV='production' ./node_modules/.bin/webpack --progress",
+    "start": "parcel watch src/index.html",
+    "build": "parcel build src/index.html --out-dir ./",
     "eslint": "eslint **/*.jsx",
     "prettier": "prettier --write \"components/**/*.{js,jsx}\"",
-    "precommit": "yarn prettier && yarn eslint && python cache_generator.py && yarn build"
+    "precommit": "yarn prettier && yarn build"
   },
   "repository": {
     "type": "git",
@@ -19,34 +19,21 @@
     "babel-preset-env": "^1.6.1",
     "current-input": "^1.1.1",
     "git-pre-commit": "^2.1.3",
-    "json-loader": "^0.5.7",
+    "parcel": "^1.10.3",
     "prettier": "^1.11.1",
     "prismjs": "^1.13.0",
     "radium": "^0.24.0",
-    "raw-loader": "^0.5.1",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "react-markdown": "^2.5.0",
     "react-router": "^3.0.2",
-    "react-sidebar": "^2.3.2",
-    "uglify-es-webpack-plugin": "^0.10.0",
-    "webpack-cli": "^2.0.13",
-    "webpack-dev-server": "^3.1.1"
+    "react-sidebar": "^2.3.2"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.2",
-    "babel-loader": "^7.1.4",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-core": "^6.26.3",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-1": "^6.24.1",
-    "eslint": "^4.19.1",
-    "eslint-plugin-import": "^2.10.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0",
     "live-server": "^1.2.0",
-    "prop-types": "^15.6.1",
-    "redbox-react": "^1.5.0",
-    "webpack": "^4.4.1"
+    "redbox-react": "^1.5.0"
   }
 }
