--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "parcel build src/index.html --out-dir ./",
     "eslint": "eslint **/*.jsx",
     "prettier": "prettier --write \"components/**/*.{js,jsx}\"",
-    "precommit": "yarn prettier && yarn build"
+    "precommit": "yarn prettier && python cleanup.py && yarn build"
   },
   "repository": {
     "type": "git",
