--- a/package.json
+++ b/package.json
@@ -3,19 +3,22 @@
   "version": "2.0.0",
   "description": "Single Page Apps for GitHub Pages",
   "scripts": {
-    "start": "parcel watch src/index.html",
+    "start": "parcel src/index.html --no-cache",
     "build": "parcel build src/index.html --out-dir ./",
     "eslint": "eslint **/*.jsx",
-    "prettier": "prettier --write \"components/**/*.{js,jsx}\"",
-    "precommit": "yarn prettier && python cleanup.py && yarn build"
+    "prettier": "prettier --write \"{components,src}/**/*.{ts,tsx,js,jsx}\"",
+    "precommit": "yarn prettier && python cleanup.py && yarn build && git add src.* index.html"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/rafrex/spa-github-pages.git"
   },
-  "author": "Rafael Pedicini <code@rafrex.com>",
+  "author": "Amit Shah <amit@amwam.me>",
   "license": "MIT",
   "dependencies": {
+    "@types/react": "^16.7.3",
+    "@types/react-dom": "^16.0.9",
+    "@types/react-sidebar": "^3.0.0",
     "babel-preset-env": "^1.6.1",
     "current-input": "^1.1.1",
     "git-pre-commit": "^2.1.3",
@@ -34,6 +37,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "live-server": "^1.2.0",
-    "redbox-react": "^1.5.0"
+    "redbox-react": "^1.5.0",
+    "typescript": "^3.1.6"
   }
 }
