--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "prettier": "^1.15.2",
     "prismjs": "^1.15.0",
     "radium": "^0.25.0",
-    "react": "^16.6.1",
-    "react-dom": "^16.6.1",
+    "react": "^16.7.0-alpha.2",
+    "react-dom": "^16.7.0-alpha.2",
     "react-markdown": "^4.0.3",
     "react-router": "^3.0.2",
     "react-sidebar": "^3.0.2"
