--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Amit Shah <amit@amwam.me>",
   "license": "MIT",
   "dependencies": {
+    "@types/prismjs": "^1.9.0",
     "@types/react": "^16.7.3",
     "@types/react-dom": "^16.0.9",
     "@types/react-sidebar": "^3.0.0",
