--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "spa-github-pages",
+  "name": "amwam-website",
   "version": "2.0.0",
   "description": "Single Page Apps for GitHub Pages",
   "scripts": {
@@ -26,8 +26,8 @@
     "prettier": "^1.15.2",
     "prismjs": "^1.15.0",
     "radium": "^0.25.0",
-    "react": "^16.7.0-alpha.2",
-    "react-dom": "^16.7.0-alpha.2",
+    "react": "^16.8.0-alpha.0",
+    "react-dom": "^16.8.0-alpha.0",
     "react-markdown": "^4.0.3",
     "react-router": "^3.0.2",
     "react-sidebar": "^3.0.2"
