--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "prettier": "^1.15.2",
     "prismjs": "^1.15.0",
     "radium": "^0.25.0",
-    "react": "^16.8.0-alpha.0",
-    "react-dom": "^16.8.0-alpha.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-markdown": "^4.0.3",
     "react-router": "^3.0.2",
     "react-sidebar": "^3.0.2"
