--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "parcel build src/index.html --out-dir ./",
     "tslint": "tslint --config tslint.json 'src/**/*.ts*'",
     "prettier": "prettier --write \"{components,src}/**/*.{ts,tsx,js,jsx,css,html}\"",
+    "prettier-check": "prettier --check \"{components,src}/**/*.{ts,tsx,js,jsx,css,html}\"",
     "precommit": "yarn prettier && python cleanup.py && yarn build && git add src.* index.html"
   },
   "repository": {
@@ -41,7 +42,6 @@
     "redbox-react": "^1.5.0",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.17.0",
-    "tslint-plugin-prettier": "^2.0.1",
     "typescript": "^3.1.6"
   }
 }
