--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "live-server": "^1.2.0",
+    "parcel-plugin-prerender": "^1.4.1",
     "redbox-react": "^1.5.0",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.17.0",
