--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Single Page Apps for GitHub Pages",
   "scripts": {
     "start": "parcel src/index.html --no-cache",
-    "build": "parcel build src/index.html --out-dir ./dist && yarn sitemap",
+    "build": "mkdir -p dist/posts && cp -R posts dist/posts/ && parcel build src/index.html --out-dir ./dist && yarn sitemap",
     "sitemap": "node generate-sitemap.js",
     "tslint": "tslint --config tslint.json 'src/**/*.ts*'",
     "prettier": "prettier --write \"{components,src}/**/*.{ts,tsx,js,jsx,css,html}\"",
@@ -12,37 +12,37 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rafrex/spa-github-pages.git"
+    "url": "git+https://github.com/Amwam/amwam.github.io.git"
   },
   "author": "Amit Shah <amit@amwam.me>",
   "license": "MIT",
   "dependencies": {
-    "@types/prismjs": "^1.9.0",
-    "@types/react": "^16.7.3",
-    "@types/react-dom": "^16.0.9",
+    "@types/prismjs": "^1.16.1",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
     "@types/react-sidebar": "^3.0.0",
     "current-input": "^1.1.1",
-    "parcel": "^1.10.3",
-    "prettier": "^1.15.2",
-    "prismjs": "^1.15.0",
-    "radium": "^0.25.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-markdown": "^4.0.3",
+    "parcel": "^1.12.4",
+    "prettier": "^2.0.5",
+    "prismjs": "^1.20.0",
+    "radium": "^0.26.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-markdown": "^4.3.1",
     "react-router": "^3.0.2",
     "react-sidebar": "^3.0.2",
-    "xmlbuilder": "^13.0.2"
+    "xmlbuilder": "^15.1.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "live-server": "^1.2.0",
+    "live-server": "^1.2.1",
     "parcel-plugin-prerender": "^1.4.1",
-    "redbox-react": "^1.5.0",
-    "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.17.0",
-    "typescript": "^3.1.6"
+    "redbox-react": "^1.6.0",
+    "tslint": "^6.1.2",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^3.9.3"
   }
 }
