--- a/package.json
+++ b/package.json
@@ -1,48 +1,23 @@
 {
-  "name": "amwam-website",
-  "version": "2.0.0",
-  "description": "Single Page Apps for GitHub Pages",
+  "name": "amwam-nextjs",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "start": "parcel src/index.html --no-cache",
-    "build": "mkdir -p dist/posts && cp -R posts dist/ && parcel build src/index.html --out-dir ./dist && yarn sitemap",
-    "sitemap": "node generate-sitemap.js",
-    "tslint": "tslint --config tslint.json 'src/**/*.ts*'",
-    "prettier": "prettier --write \"{components,src}/**/*.{ts,tsx,js,jsx,css,html}\"",
-    "prettier-check": "prettier --check \"{components,src}/**/*.{ts,tsx,js,jsx,css,html}\""
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Amwam/amwam.github.io.git"
-  },
-  "author": "Amit Shah <amit@amwam.me>",
-  "license": "MIT",
   "dependencies": {
-    "@types/prismjs": "^1.16.1",
-    "@types/react": "^16.9.35",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-sidebar": "^3.0.0",
-    "current-input": "^1.1.1",
-    "parcel": "^1.12.4",
-    "prettier": "^2.0.5",
+    "next": "9.4.2",
     "prismjs": "^1.20.0",
-    "radium": "^0.26.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
     "react-markdown": "^4.3.1",
-    "react-router": "^3.0.2",
-    "react-sidebar": "^3.0.2",
-    "xmlbuilder": "^15.1.1"
+    "react-syntax-highlighter": "^12.2.1"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "live-server": "^1.2.1",
-    "parcel-plugin-prerender": "^1.4.1",
-    "redbox-react": "^1.6.0",
-    "tslint": "^6.1.2",
-    "tslint-config-prettier": "^1.18.0",
+    "@types/node": "^14.0.5",
+    "@types/react": "^16.9.35",
     "typescript": "^3.9.3"
   }
 }
