--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build && next export -o dist",
-    "start": "next start"
+    "start": "next start",
+    "prettier-check": "prettier --check \"{components,src}/**/*.{ts,tsx,js,jsx,css,html}\""
   },
   "dependencies": {
     "next": "9.4.2",
@@ -18,6 +19,7 @@
   "devDependencies": {
     "@types/node": "^14.0.5",
     "@types/react": "^16.9.35",
+    "prettier": "^2.0.5",
     "typescript": "^3.9.3"
   }
 }
