--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@types/node": "^14.0.5",
     "@types/react": "^16.9.35",
+    "babel-plugin-prismjs": "^2.0.1",
     "prettier": "^2.0.5",
     "typescript": "^3.9.3"
   }
