--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   },
   "dependencies": {
     "next": "12.1.1",
+    "prismjs": "^1.27.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-markdown": "^6.0.3",
-    "react-syntax-highlighter": "^15.4.5"
+    "react-markdown": "^6.0.3"
   },
   "devDependencies": {
     "@types/node": "^17.0.23",
