--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
     "prettier-check": "prettier --check \"{components,pages}/**/*.{ts,tsx,js,jsx,css,html}\""
   },
   "dependencies": {
-    "next": "12.1.6",
+    "next": "13.2.4",
     "prismjs": "^1.28.0",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-markdown": "^8.0.4"
   },
   "devDependencies": {
     "@types/node": "^18.7.16",
     "@types/react": "^18.0.12",
-    "prettier": "^2.8.1",
-    "typescript": "^4.8.3"
+    "prettier": "^2.8.4",
+    "typescript": "^5.0.2"
   }
 }
