Switch to using the run command

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -19,7 +19,7 @@ jobs:
       - name: npm install, build, and test
         run: |
           yarn install
-          yarn prettier-check
+          yarn run prettier-check
           yarn build
         env:
           CI: true
