--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   },
   "dependencies": {
     "@next/third-parties": "^14.2.5",
-    "next": "13.2.4",
+    "eslint-config-next": "^14.2.5",
+    "next": "^14.2.5",
     "prismjs": "^1.28.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-markdown": "^8.0.4"
   },
   "devDependencies": {
