--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,11 @@ yarn-error.log*
 .env.production.local
 
 .direnv
+
+.yarn/*
+!.yarn/cache
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
