--- a/package.json
+++ b/package.json
@@ -3,25 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "prettier": "prettier --write \"{components,pages}/**/*.{ts,tsx,js,jsx,css,html}\"",
     "prettier-check": "prettier --check \"{components,pages}/**/*.{ts,tsx,js,jsx,css,html}\""
   },
   "dependencies": {
-    "@next/third-parties": "^15.1.0",
-    "eslint-config-next": "^14.2.5",
-    "next": "^14.2.15",
+    "@next/third-parties": "15.1.5",
+    "eslint-config-next": "15.1.5",
+    "next": "15.1.5",
     "prismjs": "^1.28.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-markdown": "^8.0.4"
   },
   "devDependencies": {
     "@types/node": "^22.5.5",
-    "@types/react": "^18.3.12",
+    "@types/react": "19.0.7",
     "prettier": "^3.3.3",
     "typescript": "^5.7.2"
+  },
+  "packageManager": "yarn@4.6.0",
+  "resolutions": {
+    "@types/react": "19.0.7"
   }
 }
