--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "next build --turbopack",
     "start": "next start",
     "prettier": "prettier --write \"{components,pages}/**/*.{ts,tsx,js,jsx,css,html}\"",
     "prettier-check": "prettier --check \"{components,pages}/**/*.{ts,tsx,js,jsx,css,html}\""
   },
   "dependencies": {
-    "@next/third-parties": "15.4.6",
+    "@next/third-parties": "15.5.2",
     "eslint-config-next": "15.5.2",
-    "next": "15.5.0",
+    "next": "15.5.2",
     "prismjs": "^1.30.0",
     "react": "19.1.1",
     "react-dom": "19.1.1",
@@ -20,12 +20,12 @@
   },
   "devDependencies": {
     "@types/node": "^24.3.0",
-    "@types/react": "19.1.10",
+    "@types/react": "19.1.12",
     "prettier": "^3.6.2",
     "typescript": "^5.9.2"
   },
   "packageManager": "yarn@4.9.2",
   "resolutions": {
-    "@types/react": "19.1.10"
+    "@types/react": "19.1.12"
   }
 }
