--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "prismjs": "^1.30.0",
     "react": "19.1.1",
     "react-dom": "19.1.1",
-    "react-markdown": "^10.1.0"
+    "react-markdown": "^10.1.0",
+    "rss": "^1.2.2"
   },
   "devDependencies": {
     "@types/node": "^24.3.0",
