--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,27 @@
 {
   "root": true,
-  "parser": "babel-eslint",
+  "parser": "@typescript-eslint/parser",
+  "extends": [
+    "next/core-web-vitals",
+    "plugin:@typescript-eslint/recommended"
+  ],
   "env": {
-    "browser": true
+    "browser": true,
+    "node": true,
+    "es2021": true
   },
   "parserOptions": {
+    "ecmaVersion": 2021,
+    "sourceType": "module",
     "ecmaFeatures": {
-      "experimentalObjectRestSpread": true
+      "jsx": true
     }
   },
   "plugins": [
-    "react"
-  ]
+    "react",
+    "@typescript-eslint"
+  ],
+  "rules": {
+    "@typescript-eslint/no-explicit-any": "warn"
+  }
 }
