--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
+    "lint": "next lint",
+    "type-check": "tsc --noEmit",
     "prettier": "prettier --write \"{components,pages}/**/*.{ts,tsx,js,jsx,css,html}\"",
     "prettier-check": "prettier --check \"{components,pages}/**/*.{ts,tsx,js,jsx,css,html}\""
   },
@@ -22,6 +24,9 @@
   "devDependencies": {
     "@types/node": "^25.0.10",
     "@types/react": "19.2.9",
+    "@typescript-eslint/eslint-plugin": "^8.54.0",
+    "@typescript-eslint/parser": "^8.54.0",
+    "eslint": "^9.39.2",
     "prettier": "^3.8.1",
     "typescript": "^5.9.3"
   },
